--- a/Frontend/CSS/stylesheet.css
+++ b/Frontend/CSS/stylesheet.css
@@ -17,7 +17,7 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 30% -20%;
+    margin: 20% -40%;
     opacity: 0.6;
     transition: 0.3;
     cursor: pointer;
@@ -37,10 +37,17 @@ body {
     height: 100%;
 }
 #video{
+    margin-left: 12%;
     width: 70%;
 }
 #instrument{
     float: right;
     writing-mode: vertical-lr; 
     text-orientation: upright; 
+    font-size: 250%;
+}
+#lautstaerke{
+    float: right;
+    text-orientation: upright; 
+    font-size: 250%;
 }
