--- a/Frontend/CSS/stylesheet.css
+++ b/Frontend/CSS/stylesheet.css
@@ -6,7 +6,8 @@ body {
     background-color: rgb(135, 157, 170);
 }
 #buttons {
-    float: right
+    float: right;
+    width: 10%;
 }
 .button{
     background-color: #4CAF50;
@@ -35,19 +36,24 @@ body {
     float: right;
     width: 80%;
     height: 100%;
+    border: 1px solid;
+    background: #ffffff;
 }
 #video{
     margin-left: 12%;
     width: 70%;
 }
+
 #instrument{
-    float: right;
+    float: left;
     writing-mode: vertical-lr; 
     text-orientation: upright; 
     font-size: 250%;
 }
 #lautstaerke{
     float: right;
+    height: 50px;
+    bottom: 0;
     text-orientation: upright; 
     font-size: 250%;
 }
